--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.truward.orion</groupId>
   <artifactId>eolaire-client</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <url>https://github.com/truward/eolaire-client</url>
   <packaging>pom</packaging>
   <name>Eolaire Client</name>
@@ -34,7 +34,7 @@
     <connection>scm:git:git@github.com:truward/eolaire-client.git</connection>
     <developerConnection>scm:git:git@github.com:truward/eolaire-client.git</developerConnection>
     <url>git@github.com:truward/eolaire-client.git</url>
-    <tag>HEAD</tag>
+    <tag>eolaire-client-1.0.0</tag>
   </scm>
 
   <distributionManagement>
