--- a/eolaire-model/pom.xml
+++ b/eolaire-model/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>eolaire-client</artifactId>
     <groupId>com.truward.orion</groupId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>eolaire-model</artifactId>
